unpackaged/main/default/objects/LS_VC__Visual_Calendar_Priority__c/LS_VC__Visual_Calendar_Priority__c.object-meta.xml
<CustomObject>
    <description>Represents a quarterly calendar in a given Calendar.</description>
    <label>Visual Calendar Priority</label>
    <nameField>
        <label>Priority Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visual Calendar Priorities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>