unpackaged/main/default/objects/LS_VC__Visual_Calendar_Priority__c/fields/LS_VC__Calendar_Tag__c.field-meta.xml
<CustomField>
    <fullName>LS_VC__Calendar_Tag__c</fullName>
    <label>Calendar Tag</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>