unpackaged/main/default/objects/LS_VC__Visual_Calendar_Priority__c/fields/LS_VC__Default__c.field-meta.xml
<CustomField>
    <fullName>LS_VC__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this checkbox if you wish this to be landing calendar.</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>