unpackaged/main/default/objects/LS_VC__Visual_Calendar_Priority__c/fields/LS_VC__Extra_Bar_Active__c.field-meta.xml
<CustomField>
    <fullName>LS_VC__Extra_Bar_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sets if the extra bar section will be displayed or not</description>
    <label>Extra Bar Active</label>
    <type>Checkbox</type>
</CustomField>