unpackaged/main/default/objects/LS_VC__Visual_Calendar_Priority__c/fields/LS_VC__Extra_Bar_Name__c.field-meta.xml
<CustomField>
    <fullName>LS_VC__Extra_Bar_Name__c</fullName>
    <description>The name of the extra bar</description>
    <label>Extra Bar Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>