unpackaged/main/default/objects/LS_VC__Visual_Calendar_Priority__c/fields/LS_VC__Order__c.field-meta.xml
<CustomField>
    <fullName>LS_VC__Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>